--- a/src/homepage.styles.scss
+++ b/src/homepage.styles.scss
@@ -13,9 +13,9 @@
 }
 
 .menu-item {
-  min-width: 30%;
-  height: 240px;
-  flex: 1 1 auto;
+  max-width: 47%;
+  height: 500px;
+  flex: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
