--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Vollkorn:wght@500;700&display=swap");
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+}
+
 body {
   font-family: "Poppins", sans-serif;
-  padding: 20px 80px;
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+a {
+  text-decoration: none;
 }
