--- a/src/components/collection-preview/collection-preview.styles.scss
+++ b/src/components/collection-preview/collection-preview.styles.scss
@@ -2,13 +2,16 @@
   display: flex;
   flex-direction: column;
   margin: 30px 0;
-  padding: 0 5vw;
+  padding: 0 15vw;
 
   .title {
     text-align: center;
     font-size: 25px;
     margin-bottom: 10vh;
     color: rgb(0, 0, 0);
+    font-weight: 400;
+    text-transform: uppercase;
+    font-family: "Vollkorn";
   }
 
   .preview {
