--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -6,8 +6,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  margin-bottom: 10vh;
-  margin-top: 5vh;
+  margin: 5vh 0 10vh 0;
   overflow: hidden;
 
   &:hover {
