--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -6,7 +6,7 @@
   justify-content: space-between;
   position: fixed;
   z-index: 3000;
-  padding: 0 80px;
+  padding: 0 5vw;
 
   .logo {
     font-size: 30px;
@@ -31,6 +31,7 @@
       }
       color: rgb(0, 0, 0);
       cursor: pointer;
+      font-size: 14px;
     }
   }
 }
