--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -2,21 +2,38 @@
   width: 22%;
   display: flex;
   flex-direction: column;
-  height: 350px;
+  height: 400px;
   align-items: center;
+  cursor: pointer;
+
+  &:hover {
+    .image {
+      filter: grayscale(0) contrast(1.3);
+    }
+    .custom-button {
+      border-radius: 50px;
+    }
+  }
 
   .image {
     width: 100%;
-    height: 95%;
+    height: 100%;
     background-size: cover;
     background-position: top center;
     margin-bottom: 5px;
-    filter: grayscale(0.5) contrast(1.1);
+    filter: grayscale(1) contrast(1.2);
+    transition: filter 2s cubic-bezier(0.075, 0.82, 0.165, 1);
+  }
+
+  .custom-button {
+    margin-top: 20px;
+    font-size: 12px;
+    transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
   }
 
   .collection-footer {
     width: 100%;
-    height: 5%;
+    height: auto;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
