--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -37,4 +37,16 @@
       border: none;
     }
   }
+
+  &.inverted {
+    background-color: white;
+    color: black;
+    border: 1px solid rgb(218, 218, 218);
+
+    &:hover {
+      background-color: black;
+      color: white;
+      border: 1px solid black;
+    }
+  }
 }
