--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,6 +1,6 @@
 .cart-dropdown {
   position: absolute;
-  width: 240px;
+  width: 300px;
   height: 340px;
   display: flex;
   flex-direction: column;
@@ -10,6 +10,29 @@
   top: 90px;
   right: 40px;
   z-index: 5;
+
+  .cart-arrow {
+    width: 0;
+    height: 0;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-bottom: 8px solid black;
+    position: absolute;
+    top: -8px;
+    right: 20%;
+
+    &::before {
+      content: "";
+      height: 100%;
+      width: 100%;
+      border-left: 8px solid transparent;
+      border-right: 8px solid transparent;
+      border-bottom: 8px solid white;
+      position: absolute;
+      right: -8px;
+      top: 1px;
+    }
+  }
 
   .cart-items {
     height: 240px;
@@ -21,15 +44,15 @@
       background-color: #eeecec;
     }
     &::-webkit-scrollbar {
-      width: 6px;
+      width: 4px;
       background-color: #f8f8f8;
     }
     &::-webkit-scrollbar-thumb {
-      background-color: #dddddd;
+      background-color: #bdbdbd;
     }
   }
 
   button {
-    margin-top: auto;
+    margin-top: 20px;
   }
 }
