--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -41,13 +41,13 @@
 
     .name {
       margin: 20px 0 0px 0;
-      color: #8b8b8b;
+      font-weight: bold;
       font-size: 16px;
     }
 
     .price {
-      font-weight: bold;
       size: 18px;
+      color: #777777;
     }
   }
 }
