--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,12 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Vollkorn+SC&display=swap");
 
 .header {
-  height: 90px;
+  height: 100px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: space-between;
   position: fixed;
+  top: 0;
+  left: 0;
   z-index: 3000;
   padding: 0 100px;
   background-color: transparent;
@@ -15,7 +17,6 @@
 
   &.scrolled {
     background-color: white;
-    border-bottom: solid 1px rgb(216, 216, 216);
   }
 
   .logo {
@@ -40,7 +41,7 @@
       }
       color: rgb(0, 0, 0);
       cursor: pointer;
-      font-size: 14px;
+      font-size: 16px;
     }
   }
 }
