--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -28,7 +28,17 @@
   }
 
   .quantity {
-    padding-left: 20px;
+    display: flex;
+
+    .arrow {
+      color: darkgrey;
+      cursor: pointer;
+    }
+
+    .value {
+      margin: 0 20px;
+      font-weight: bold;
+    }
   }
 
   .remove-button {
