--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -10,9 +10,6 @@
     .image {
       filter: grayscale(0) contrast(1.3);
     }
-    .custom-button {
-      border-radius: 50px;
-    }
   }
 
   .image {
@@ -28,7 +25,6 @@
   .custom-button {
     margin-top: 20px;
     font-size: 12px;
-    transition: all 3s cubic-bezier(0.075, 0.82, 0.165, 1);
   }
 
   .collection-footer {
@@ -43,6 +39,7 @@
       margin: 20px 0 0px 0;
       font-weight: bold;
       font-size: 16px;
+      text-transform: uppercase;
     }
 
     .price {
