--- a/src/components/custom-button/custom-button.styles.scss
+++ b/src/components/custom-button/custom-button.styles.scss
@@ -15,6 +15,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
 
   img {
     height: 20px;
