--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -25,8 +25,15 @@
   }
 
   .total {
-    margin: 30px 40px 0 auto;
     font-size: 20px;
     font-weight: bold;
+    margin: 40px 0;
+  }
+
+  .test-warning {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 15px;
+    color: rgb(105, 105, 105);
   }
 }
