--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Vollkorn:wght@500;700&display=swap");
-
 *,
 *::before,
 *::after {
@@ -18,6 +16,7 @@ html {
 
 body {
   font-family: "Poppins", sans-serif;
+  height: 100%;
 }
 
 a {
@@ -29,5 +28,19 @@ a {
 }
 
 .App > * {
-  padding-top: 150px;
+  padding-top: 100px;
+}
+
+/* Change autocomplete styles in WebKit */
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: #000000;
+  transition: background-color 5000s ease-in-out 0s;
 }
