--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -1,5 +1,5 @@
 .cart-dropdown {
-  position: absolute;
+  position: fixed;
   width: 300px;
   height: 340px;
   display: flex;
@@ -7,7 +7,7 @@
   padding: 20px;
   border: 1px solid black;
   background-color: white;
-  top: 90px;
+  top: 60px;
   right: 40px;
   z-index: 5;
 
@@ -19,7 +19,7 @@
     border-bottom: 8px solid black;
     position: absolute;
     top: -8px;
-    right: 20%;
+    right: 20px;
 
     &::before {
       content: "";
@@ -53,7 +53,6 @@
   }
 
   .empty-message {
-    font-size: 18px;
     margin: 50px auto;
   }
 
