--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,23 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Vollkorn+SC&display=swap");
-
 .header {
-  height: 100px;
   width: 100%;
-  display: flex;
+  height: 60px;
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   align-items: center;
-  justify-content: space-between;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 3000;
-  padding: 0 100px;
+  padding: 5px 3vw;
   background-color: transparent;
   border-bottom: solid 1px transparent;
   transition: all cubic-bezier(0.075, 0.82, 0.165, 1) 0.2s;
-
-  &.scrolled {
-    background-color: white;
-  }
 
   .logo {
     font-size: 35px;
@@ -28,20 +23,24 @@
 
   .logo-container {
     width: auto;
+    justify-self: center;
   }
 
   .options {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
+
+    &:nth-of-type(2) {
+      justify-self: flex-end;
+    }
 
     .option {
       &:not(:last-child) {
-        margin-right: 30px;
+        margin-right: 40px;
       }
       color: rgb(0, 0, 0);
       cursor: pointer;
-      font-size: 16px;
+      font-size: 14px;
     }
   }
 }
