--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -6,7 +6,7 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  margin: 5vh 0 10vh 0;
+  margin: 5vh 0 5vh 0;
   overflow: hidden;
 
   &:hover {
@@ -25,7 +25,7 @@
   &:nth-child(4) {
     max-width: 100%;
     flex: 100%;
-    height: 85vh;
+    height: 70vh;
   }
 
   &.large {
@@ -63,7 +63,7 @@
     span {
       font-weight: lighter;
       font-size: 14px;
-      color: rgb(131, 131, 131);
+      color: grey;
       letter-spacing: 0.5px;
     }
   }
