--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -1,10 +1,10 @@
 .checkout-page {
   width: 100%;
-  min-height: 90vh;
+  min-height: calc(100vh - 60px);
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 100px;
+  padding: 100px 12vw;
 
   .checkout-header {
     width: 100%;
@@ -24,10 +24,26 @@
     }
   }
 
+  .empty-message {
+    margin: 150px 0;
+  }
+
   .total {
     font-size: 20px;
     font-weight: bold;
     margin: 40px 0;
+  }
+
+  button {
+    background: black !important;
+    padding: 5px 20px !important;
+    border-radius: 0 !important;
+
+    span {
+      font-size: 16px !important;
+      background: none !important;
+      box-shadow: none !important;
+    }
   }
 
   .test-warning {
