--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -2,27 +2,25 @@
   width: 22%;
   display: flex;
   flex-direction: column;
-  height: 500px;
   align-items: center;
-  margin: 0 30px 50px 30px;
-  flex: 30%;
+  flex: 1 1 300px;
+  margin: 0 10px 50px 0;
 
-  @media (max-width: 1280px) {
-    width: 100% !important;
+  &:last-child {
+    margin-right: 0;
   }
 
   &:hover {
     .image {
-      filter: contrast(1.3);
+      filter: grayscale(1);
     }
   }
 
   .image {
     width: 100%;
-    height: 300px;
-
+    height: 700px;
     margin-bottom: 5px;
-    filter: contrast(1.2);
+    filter: grayscale(0);
     transition: filter 2s cubic-bezier(0.075, 0.82, 0.165, 1);
 
     cursor: pointer;
