--- a/src/components/hero/hero.styles.scss
+++ b/src/components/hero/hero.styles.scss
@@ -1,52 +1,92 @@
 .hero {
   height: 100%;
-  max-width: 800px;
-  text-align: center;
+  width: 100%;
   display: flex;
   flex-direction: column;
-  margin: 100px 0 200px 0;
+  align-items: center;
   opacity: 0;
   transform: translateY(30px);
-  transition: all 1.5s cubic-bezier(0.075, 0.82, 0.165, 1) 3.2s;
+  transition: all 1.5s cubic-bezier(0.075, 0.82, 0.165, 1) 3.4s;
+
+  &-intro {
+    margin: 100px 0;
+    max-width: 1000px;
+    h1 {
+      font-size: 80px;
+      text-align: center;
+      font-weight: 200;
+    }
+  }
+
+  .video-bg {
+    height: calc(100vh - 60px);
+    width: 100%;
+    position: relative;
+
+    .video {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
+
+    .video-text {
+      position: absolute;
+      top: 50%;
+      left: 5%;
+      transform: translateY(-50%);
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      z-index: 1;
+
+      h1 {
+        color: white;
+        font-weight: 200;
+        font-size: 50px;
+        line-height: 1.2;
+      }
+
+      p {
+        font-size: 20px;
+        color: white;
+        margin: 30px 0 50px;
+        font-weight: 300;
+        letter-spacing: 1px;
+      }
+    }
+  }
 
   &.show {
     opacity: 1;
     transform: translateY(0);
   }
 
-  @media (max-width: 819px) {
-    margin: 50px 0 100px;
-  }
-
-  h1 {
-    margin-bottom: 20px;
-    font-size: 18px;
-  }
-
-  p {
-    margin-bottom: 30px;
-    font-size: 40px;
-    font-family: "Nanum Myeongjo";
-    font-weight: 700;
-
-    @media (max-width: 819px) {
-      font-size: 30px;
-    }
-  }
-
-  span {
-    font-size: 18px;
-    font-family: "Vollkorn";
-    font-weight: 400;
-    margin-bottom: 30px;
-  }
-
-  div {
+  .content {
+    text-align: center;
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    max-width: 800px;
+    margin: 10vw 0;
 
-    button:first-of-type {
-      margin-right: 10px;
+    p {
+      font-size: 30px;
+      font-family: "Vollkorn";
+
+      @media (max-width: 819px) {
+        font-size: 30px;
+      }
+    }
+
+    span {
+      font-size: 16px;
+      font-weight: 500;
+      margin: 100px 0 50px 0;
+    }
+
+    div {
+      display: flex;
+      justify-content: center;
+      margin: 40px 0;
     }
   }
 }
