--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -1,13 +1,22 @@
 .menu-item {
-  max-width: 47%;
-  height: 70vh;
+  max-width: 49%;
   flex: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   position: relative;
-  margin: 5vh 0;
+  margin-bottom: 5vh;
   overflow: hidden;
+
+  &.small {
+    max-width: 32%;
+  }
+
+  &.large {
+    max-width: 100%;
+    flex: 100%;
+  }
 
   &:hover {
     cursor: pointer;
@@ -19,22 +28,6 @@
     }
   }
 
-  &:first-child {
-    margin-top: 0;
-  }
-
-  &:first-child,
-  &:nth-child(4) {
-    max-width: 100%;
-    flex: 100%;
-    height: 100vh;
-  }
-
-  &.large {
-    height: 90vh;
-    background-position: center;
-  }
-
   @media (max-width: 1100px) {
     width: 100% !important;
     height: 500px !important;
@@ -42,30 +35,20 @@
 
   @media (max-width: 795px) {
     max-width: 100% !important;
-    height: 300px !important;
+
     flex: 100% !important;
     margin: 20px 0;
   }
 
   .background-image {
-    position: absolute;
-    left: 0;
-    top: 0;
-    height: 100%;
-    width: 70%;
+    height: 90vh;
+    width: 100%;
     overflow: hidden;
-
-    &:first-of-type,
-    &:nth-child(4) {
-      width: 80%;
-    }
-
-    @media (max-width: 1100px) {
-      position: static;
-      width: 100% !important;
-    }
+    position: relative;
 
     img {
+      position: absolute;
+      top: 0;
       height: 100%;
       width: 100%;
       object-fit: cover;
@@ -74,56 +57,27 @@
   }
 
   .content {
-    padding: 25px;
+    padding: 25px 0;
     display: flex;
+    align-items: center;
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    position: absolute;
-    top: 50%;
-    right: 0;
-    width: 30%;
-    text-align: left;
-    transform: translateY(-50%);
-
-    @media (max-width: 1500px) {
-      background: white;
-      width: 40%;
-    }
-
-    @media (max-width: 1100px) {
-      width: max-content;
-      align-items: center;
-      right: 50%;
-      transform: translate(50%, -50%);
-    }
+    justify-content: space-between;
+    z-index: 1;
+    width: 100%;
 
     .title {
       font-weight: 400;
-      margin-bottom: 10px;
-      font-size: 50px;
+      font-size: 20px;
       color: black;
       text-transform: capitalize;
       font-family: "Vollkorn";
-      position: absolute;
-      top: -60px;
-      left: -50px;
-
-      @media (max-width: 1500px) {
-        position: static;
-        font-size: 30px;
-      }
     }
 
     p {
-      font-size: 13px;
-      margin-bottom: 30px;
-      font-weight: 400;
-      max-width: 400px;
-
-      @media (max-width: 1100px) {
-        display: none;
-      }
+      width: 70%;
+      text-align: center;
+      margin: 20px 0 30px 0;
+      font-size: 14px;
     }
   }
 }
