--- a/src/pages/collection/collection.styles.scss
+++ b/src/pages/collection/collection.styles.scss
@@ -1,8 +1,13 @@
 .collection-page {
   display: flex;
   flex-direction: column;
+  align-items: center;
   margin-bottom: 10vh;
-  padding: 0 10vw;
+  padding: 50px 10vw 0;
+
+  @media (max-width: 500px) {
+    padding: 50px 0;
+  }
 
   .navigator {
     margin: 0 auto 40px;
@@ -25,6 +30,7 @@
 
   .intro {
     margin-bottom: 100px;
+    max-width: 800px;
 
     p {
       font-size: 14px;
@@ -47,8 +53,12 @@
       width: auto;
 
       & .image {
+        height: 100%;
+
         img {
-          object-fit: contain;
+          height: 100%;
+          width: 100%;
+          object-fit: cover;
         }
       }
     }
