--- a/src/pages/contact/contact.styles.scss
+++ b/src/pages/contact/contact.styles.scss
@@ -2,6 +2,7 @@
   max-width: 500px;
   margin: 0 auto;
   min-height: 100vh;
+  padding-top: 100px;
 
   @media (max-width: 500px) {
     width: 100%;
@@ -28,5 +29,6 @@
     padding: 5px;
     font-size: 16px;
     font-family: "Poppins";
+    background: none;
   }
 }
