--- a/src/pages/shop/shop.styles.scss
+++ b/src/pages/shop/shop.styles.scss
@@ -1,3 +1,7 @@
 .shop-page {
-  min-height: calc(100vh - 60px);
+  padding: 60px 40px 0;
+
+  @media (max-width: 500px) {
+    padding: 60px 10px 0;
+  }
 }
