--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -11,24 +11,29 @@
   }
 
   &:hover {
-    .image {
-      filter: grayscale(1);
+    .image img {
+      transform: scale(1.1);
     }
+  }
+
+  @media (max-width: 500px) {
+    margin: 0 0 50px 0;
   }
 
   .image {
     width: 100%;
     height: 700px;
     margin-bottom: 5px;
-    filter: grayscale(0);
-    transition: filter 2s cubic-bezier(0.075, 0.82, 0.165, 1);
-
     cursor: pointer;
+    overflow: hidden;
 
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+
+      transform: scale(1);
+      transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
     }
 
     @media (max-width: 1280px) {
