--- a/src/components/hero/hero.styles.scss
+++ b/src/components/hero/hero.styles.scss
@@ -65,16 +65,18 @@
     text-align: center;
     display: flex;
     flex-direction: column;
-    max-width: 800px;
+    max-width: 700px;
     margin: 10vw 0;
+    padding: 0 40px;
+
+    @media (max-width: 500px) {
+      padding: 0 20px;
+      margin: 100px 0;
+    }
 
     p {
-      font-size: 30px;
-      font-family: "Vollkorn";
-
-      @media (max-width: 819px) {
-        font-size: 30px;
-      }
+      font-size: 25px;
+      font-weight: 400;
     }
 
     span {
