--- a/src/pages/contact/contact.styles.scss
+++ b/src/pages/contact/contact.styles.scss
@@ -1,34 +1,60 @@
 .contact {
-  max-width: 500px;
-  margin: 0 auto;
-  min-height: 100vh;
-  padding-top: 100px;
+  height: calc(100vh - 60px);
+  flex-direction: row-reverse;
+  display: flex;
+  align-items: center;
 
-  @media (max-width: 500px) {
+  @media (max-width: 900px) {
+    flex-direction: column-reverse;
+    height: 100%;
+    padding-top: 100px;
+    margin: 0 0 100px 0;
+  }
+
+  &-bg {
+    height: 100%;
     width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
+
+    @media (max-width: 900px) {
+      height: 300px;
+      margin-bottom: 50px;
+    }
+
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+    }
   }
 
-  button {
-    margin-top: 40px;
-  }
-
-  .title {
-    font-family: "Vollkorn";
-    font-weight: 500;
-    font-size: 50px;
-  }
-
-  span {
-    color: grey;
-  }
-
-  textarea {
+  &-content {
+    padding: 0 100px;
     width: 100%;
-    padding: 5px;
-    font-size: 16px;
-    font-family: "Poppins";
-    background: none;
+
+    @media (max-width: 900px) {
+      padding: 0 5vw;
+    }
+
+    button {
+      margin-top: 40px;
+    }
+
+    .title {
+      font-family: "Vollkorn";
+      font-weight: 500;
+      font-size: 35px;
+    }
+
+    span {
+      color: grey;
+    }
+
+    textarea {
+      width: 100%;
+      padding: 5px;
+      font-size: 16px;
+      font-family: "Poppins";
+      background: none;
+    }
   }
 }
