--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -10,12 +10,6 @@
     margin-right: 0;
   }
 
-  &:hover {
-    .image img {
-      transform: scale(1.1);
-    }
-  }
-
   @media (max-width: 500px) {
     margin: 0 0 50px 0;
   }
@@ -26,12 +20,49 @@
     margin-bottom: 5px;
     cursor: pointer;
     overflow: hidden;
+    position: relative;
+
+    &:hover {
+      .circle {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1;
+      }
+
+      img {
+        filter: opacity(0.3);
+        transform: scale(1.1);
+      }
+    }
+
+    .circle {
+      height: 100px;
+      width: 100px;
+      z-index: 2;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      border-radius: 50%;
+      background-color: black;
+      transform: translate(-50%, -30%) scale(0.9);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      opacity: 0;
+      transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+
+      span {
+        text-transform: uppercase;
+        font-size: 14px;
+        letter-spacing: 3px;
+        color: white;
+      }
+    }
 
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-
+      filter: opacity(1);
       transform: scale(1);
       transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
     }
